# itmo_summaries_4_course

architecture_lectures/: 19_09_2015.txt
coding/GF2/: BCH_dec.m  bin2word.m  gen_pol.m  gf2.m  gf2_inv.m  gf2_log.m  gf2_min.m  gf2_mul.m  gf2_mul_pol.m  gf2_sum.m  part4task2.m  test_gf.m
coding/Le_776_she/: bin2word.m  g2code.m  gauss.m  hammingw.m  part3.m  part4task2.m  part4task4Generating.m  part4task4Syndrome.m  word2bin.m
coding/coding/: pom.xml  result.html
coding/ind/: t23_27.py  task2_3.py  task3_34.py
coding/java/: Main.java  Task3.java
db_lectures/: 04_09_2015.txt  08_10_2015.txt  11_09_2015.txt  25_09_2015.txt
db_lectures/homeworks/: batch.sql  homework2.sql  homework3.txt  homework5.sql  homework7.sql  hw4_isaev.txt  hw7.sh  hw_5.sql
fp/: 07_09_2015.txt  12_10_2015.txt  14_09_2015.txt
fp/BeforeExam/: CW1.hs  CW2.hs
fp/CW/: Iterator.hs
fp/Exam/: Exam.cabal  ParMergeSort  ParMergeSort.eventlog  ParMergeSort.hi  ParMergeSort.hs  ParMergeSort2.hs
fp/Homework1/: CachedSumList.hs  SplitSum.hs
fp/Homework10/: Buttons.hs  EntryDemo.hi  EntryDemo.hs  FileManager.hi  FileManager.hs  HelloWorld.hi  HelloWorld.hs  ListDemo.hi  ListDemo.hs  ScrollDemo.hi  ScrollDemo.hs  SegfaultExample.hs  grep.hi  sample.txt
fp/Homework2/: :w  CachedSumList.hs  MonoidInstances.hs
fp/Homework3/: FishJoin.hs  FishToJoin.hs  FishToMonad.hs  MonadToJoin.hs  NextN.hs  run.sh
fp/hw11/: hw11.cabal
fp/hw11/src/: Main.hs  Utils.hs
is_lectures/: practice_21_09_2015.txt
net_lectures/: #.DS_Store#  05_09_2015.txt  12_09_2015.txt
searches/: lecture2.txt
(+218 files in other folders)
