name:                Notebook
version:             0.1.0.0
synopsis:            Notebook Haskell
license:             GPL-2
author:              Ilya Dronov
maintainer:          dronoffilya@yandex.ru
copyright:           Copyright: (c) 2016 Ilya Dronov
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable notebook
  main-is:             Main.hs
  other-modules:       Utils
  build-depends:       base >= 4.7,
                       containers,
                       gtk3 >= 0.14.1,
                       glib >= 0.13,
                       directory >= 1.1.0.0 && < 1.2.3.0,
                       filepath >= 1.3.0.0,
                       unix,
                       stm,
                       transformers,
                       acid-state,
                       mtl >= 2.2.1,
                       safecopy,
                       network
  hs-source-dirs:      src  
  default-language:    Haskell2010
